# ru-banks-xlsx-parser

./: .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  pyproject.toml
src/: __main__.py  config.py  creds.py  dto.py  paths.py  shared.py  transfer.py
src/banks/: __init__.py  interface.py  sber.py  tinkoff.py  tochka.py
src/google_doc/: __init__.py  google_doc.py
src/google_doc/categories/: __init__.py  income.py  outcome.py  shared.py
src/input/: tochka.py
src/output/: google_doc.py
